--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "ja",
-  "@@last_modified": "2025-11-04 13:35:21.867810",
+  "@@last_modified": "2025-11-05 14:22:32.655712",
   "about": "このアプリについて",
   "@about": {
     "type": "String",
@@ -4195,13 +4195,13 @@
   "requestSummaries": "概要をリクエスト",
   "loadingActivitySummary": "活動の概要を読み込み中...",
   "generatingNewActivities": "この言語ペアの最初のユーザーです！少々お待ちください。あなたのために活動を準備しています。",
-  "requestAccessTitle": "分析ビューのアクセスをリクエストしますか？",
+  "requestAccessTitle": "分析アクセスをリクエストしますか？",
   "requestAccessDesc": "参加者の分析を見るためのアクセスをリクエストしますか？\n\n参加者が同意すれば、このコースの管理者は以下を閲覧できます：\n    • 単語総数\n    • 文法概念の合計\n    • 完了した活動セッションの合計\n    • 正しく使われた、誤って使われた特定の文法概念\n\n閲覧できない情報は以下です：\n    • コース外のチャットのメッセージ\n    • 単語リスト",
   "requestAccess": "アクセスをリクエスト ({count})",
   "analyticsInactiveTitle": "非アクティブなユーザーへのリクエストは送信できませんでした",
   "analyticsInactiveDesc": "この機能が導入されて以来ログインしていない非アクティブなユーザーはリクエストを見ることができません。\n\nユーザーが戻ったときにリクエストボタンが表示されます。後で、利用可能になったときにその名前の下のリクエストボタンをクリックして再送信できます。",
   "accessRequestedTitle": "分析アクセスリクエスト",
-  "accessRequestedDesc": "「{space}」の管理者があなたの学習分析を閲覧するためのリクエストをしています。\n\n同意すれば、このコースの管理者は以下を閲覧できます：\n    • 単語総数\n    • 文法概念の合計\n    • 完了した活動セッションの合計\n    • 正しく使われた、誤って使われた特定の文法概念\n\n閲覧できない情報は以下です：\n    • コース外のチャットのメッセージ\n    • 単語リスト",
+  "accessRequestedDesc": "リクエスト中の管理者: {admin} \n\n「{space}」の管理者があなたの学習分析を表示することをリクエストしています。\n\n同意する場合、彼らはあなたの以下を表示できるようになります:\n    • 総語彙\n    • 総文法概念\n    • 完了した総活動セッション\n    • 正しくおよび誤って使用された特定の文法概念\n\n彼らはあなたの以下を表示できません:\n    • コース外のチャットでのメッセージ\n    • 語彙リスト",
   "allowAccess": "アクセスを許可",
   "denyAccess": "アクセスを拒否",
   "adminRequestedAccess": "管理者があなたの分析を閲覧するようリクエストしました。",
@@ -11910,6 +11910,9 @@
   "@accessRequestedDesc": {
     "type": "String",
     "placeholders": {
+      "admin": {
+        "type": "String"
+      },
       "space": {
         "type": "String"
       }
