--- a/lib/l10n/intl_ka.arb
+++ b/lib/l10n/intl_ka.arb
@@ -2937,13 +2937,13 @@
   "requestSummaries": "მოთხოვნა მიმოხილვებისთვის",
   "loadingActivitySummary": "აქტივობის მიმოხილვის ჩატვირთვა...",
   "generatingNewActivities": "თქვენ ხართ ამ ენის წყვილის პირველი მომხმარებელი! გთხოვთ, ერთი წუთი გქონდეთ, ჩვენ ვამზადებთ აქტივობებს თქვენთვის.",
-  "requestAccessTitle": "მოთხოვნა ანალიტიკის ნახვის დაშვების შესახებ?",
+  "requestAccessTitle": "ანალიტიკის წვდომის მოთხოვნა?",
   "requestAccessDesc": "გსურთ მიიღოთ დაშვება მონაწილეთა ანალიტიკის სანახავად?\n\nთუ მონაწილეები თანხმდებიან, ამ კურსის ადმინისტრატორები შეძლებენ ნახონ მათ:\n    • საერთო ლექსიკონი\n    • საერთო გრამატიკის კონცეპტები\n    • დასრულებული აქტივობის სესიონები\n    • გამოყენებული, სწორად და არასწორად გრამატიკის კონცეპტები\n\nისინი ვერ შეძლებენ ნახონ:\n    • შეტყობინებები ჩატებში კურსის გარეთ\n    • ლექსიკონის სია",
   "requestAccess": "მოთხოვნა დაშვებაზე ({count})",
   "analyticsInactiveTitle": "მოთხოვნები არაქტიურ მომხმარებლებს ვერ გაიგზავნება",
   "analyticsInactiveDesc": "არაქტიური მომხმარებლები, რომლებიც ამ ფუნქციის გამოჩენის შემდეგ არ შესულან, თქვენი მოთხოვნა ვერ იხილავენ.\n\nმოთხოვნის ღილაკი გამოჩნდება, როდესაც ისინი დაბრუნდებიან. შეგიძლიათ მოგვიანებით ისევ გამოაგზავნოთ მოთხოვნა მათი სახელის ქვეშ არსებული ღილაკის დაჭერით, როდესაც ის ხელმისაწვდომია.",
   "accessRequestedTitle": "ანალიტიკის დაშვების მოთხოვნა",
-  "accessRequestedDesc": "„{space}“-ის ადმინისტრატორები გთხოვენ თქვენი სწავლების ანალიტიკის ნახვას.\n\nთუ თანხმდებით, ამ კურსის ადმინისტრატორები შეძლებენ ნახონ თქვენს:\n    • საერთო ლექსიკონი\n    • საერთო გრამატიკის კონცეპტები\n    • დასრულებული აქტივობის სესიონები\n    • გამოყენებული, სწორად და არასწორად გრამატიკის კონცეპტები\n\nისინი ვერ შეძლებენ ნახონ:\n    • შეტყობინებები ჩატებში კურსის გარეთ\n    • ლექსიკონის სია",
+  "accessRequestedDesc": "მოთხოვნა ადმინისტრატორ(ებ)ისთვის: {admin} \n\n„{space}“-დან ადმინისტრატორები ითხოვენ თქვენი სასწავლო ანალიტიკის ნახვას.\n\nთუ თანახმა ხართ, ისინი შეძლებენ თქვენი:\n    • საერთო ლექსიკის\n    • საერთო გრამატიკული კონცეფციების\n    • დასრულებული აქტივობის სესიების\n    • გამოყენებული კონკრეტული გრამატიკული კონცეფციების, სწორად და არასწორად\n\nისინი ვერ შეძლებენ თქვენი:\n    • შეტყობინებების ნახვას კურსის გარეთ\n    • ლექსიკის სიას",
   "allowAccess": "დაშვების ნება",
   "denyAccess": "უარყოფა დაშვებაზე",
   "adminRequestedAccess": "ადმინისტრატორებმა მოითხოვეს თქვენი ანალიტიკის ნახვა.",
@@ -3075,7 +3075,7 @@
   "playWithAI": "ამ დროისთვის ითამაშეთ AI-თან",
   "courseStartDesc": "Pangea Bot მზადაა ნებისმიერ დროს გასასვლელად!\n\n...მაგრამ სწავლა უკეთესია მეგობრებთან ერთად!",
   "@@locale": "ka",
-  "@@last_modified": "2025-11-04 13:35:34.501028",
+  "@@last_modified": "2025-11-05 14:22:50.407629",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12150,6 +12150,9 @@
   "@accessRequestedDesc": {
     "type": "String",
     "placeholders": {
+      "admin": {
+        "type": "String"
+      },
       "space": {
         "type": "String"
       }
