--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "uk",
-  "@@last_modified": "2025-11-04 13:34:20.995929",
+  "@@last_modified": "2025-11-05 14:20:35.815740",
   "about": "Про застосунок",
   "@about": {
     "type": "String",
@@ -4854,13 +4854,13 @@
   "requestSummaries": "Запитати зведення",
   "loadingActivitySummary": "Завантаження зведення активності...",
   "generatingNewActivities": "Ви перший користувач цієї пари мов! Будь ласка, зачекайте хвилину, ми готуємо активності саме для вас.",
-  "requestAccessTitle": "Запитати доступ до перегляду аналітики?",
+  "requestAccessTitle": "Запросити доступ до аналітики?",
   "requestAccessDesc": "Бажаєте запросити доступ до перегляду аналітики учасників?\n\nЯкщо учасники погоджуються, адміністратори цього курсу зможуть переглядати їх:\n    • загальний словниковий запас\n    • загальні граматичні концепції\n    • кількість завершених сесій активності\n    • конкретні граматичні концепції, використані правильно та неправильно\n\nВони не зможуть переглядати:\n    • повідомлення у чатах поза межами курсу\n    • список словникових запасів",
   "requestAccess": "Запитати доступ ({count})",
   "analyticsInactiveTitle": "Запити до неактивних користувачів не можуть бути надіслані",
   "analyticsInactiveDesc": "Неактивні користувачі, які не входили з моменту впровадження цієї функції, не побачать ваш запит.\n\nКнопка «Запит» з'явиться, коли вони повернуться. Ви зможете повторно надіслати запит пізніше, натиснувши кнопку «Запит» під їхнім ім'ям, коли вона стане доступною.",
   "accessRequestedTitle": "Запит на доступ до аналітики",
-  "accessRequestedDesc": "Адміністратори «{space}» запитують доступ до ваших аналітичних даних навчання.\n\nЯкщо ви погоджуєтеся, адміністратори цього курсу зможуть переглядати ваші:\n    • загальний словниковий запас\n    • загальні граматичні концепції\n    • кількість завершених сесій активності\n    • конкретні граматичні концепції, які використовувалися, правильно та неправильно\n\nВони не зможуть переглядати ваші:\n    • повідомлення у чатах поза межами курсу\n    • список словникових слів",
+  "accessRequestedDesc": "Запитують адміністратори(и): {admin} \n\nАдміністратори з “{space}” просять переглянути вашу аналітику навчання.\n\nЯкщо ви згодні, вони зможуть переглядати ваше:\n    • загальне словникове запас\n    • загальні граматичні концепції\n    • загальну кількість завершених сесій активності\n    • конкретні граматичні концепції, які використовувалися, правильно та неправильно\n\nВони не зможуть переглядати ваше:\n    • повідомлення в чатах поза курсом\n    • список словникового запасу",
   "allowAccess": "Дозволити доступ",
   "denyAccess": "Заборонити доступ",
   "adminRequestedAccess": "Адміністратори запитали доступ до вашої аналітики.",
@@ -11114,6 +11114,9 @@
   "@accessRequestedDesc": {
     "type": "String",
     "placeholders": {
+      "admin": {
+        "type": "String"
+      },
       "space": {
         "type": "String"
       }
