--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5321,5 +5321,9 @@
   "inviteFriends": "Invite friends",
   "activityStatsButtonTooltip": "Activity info",
   "allow": "Allow",
-  "deny": "Deny"
+  "deny": "Deny",
+  "enabledRenewal": "Enable Subscription Renewal",
+  "subscriptionEndsOn": "Subscription Ends On",
+  "subscriptionRenewsOn": "Subscription Renews On",
+  "waitForSubscriptionChanges": "Changes to your subscription may take a moment to reflect in the app."
 }
